src/objects/QPMS__Person_Profile__c.object
<CustomObject>
    <description>This object is used to store user related information in  Training module</description>
    <fields>
        <fullName>QPMS__Allowed_Days__c</fullName>
        <description>Used to store allow days in approval process</description>
        <inlineHelpText>Used to store allow days in approval orocess</inlineHelpText>
        <label>Allowed Days</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>QPMS__ApprovalProcess__c</fullName>
        <description>This field stores the name of approval process currently this record hold</description>
        <inlineHelpText>This field stores the name of approval process currently this record hold</inlineHelpText>
        <label>ApprovalProcess</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>PersonProfile</fullName>
                </value>
                <value>
                    <fullName>PersonProfileApproval</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>QPMS__Approval_Group__c</fullName>
        <description>This filed stores approval  group id</description>
        <label>Approval Group</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__Approval_Process_Complete__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is used to complete the approval process in Person Profile</description>
        <inlineHelpText>This field is used to complete the approval process in Person Profile</inlineHelpText>
        <label>Approval Process Complete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>QPMS__Approval_Process__c</fullName>
        <description>Thsi field is used save person profile status</description>
        <label>Approval Process</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Person Profile Active</fullName>
                </value>
                <value>
                    <fullName>Person Profile Deactivate</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>QPMS__Approval_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used to store the Approval required for Person Profile</description>
        <inlineHelpText>Used to store the Approval required for Person Profile</inlineHelpText>
        <label>Approval Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>QPMS__Approval_Status__c</fullName>
        <description>To store the status of record in approval process</description>
        <inlineHelpText>To store the status of record in approval process</inlineHelpText>
        <label>Approval Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Rejected</fullName>
                </value>
                <value>
                    <fullName>Recall</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Pending Approval</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>QPMS__Approver_1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This filed is used to store second approver in approval process.</description>
        <inlineHelpText>This filed is used to store second approver in approval process.</inlineHelpText>
        <label>Approver 1</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Person_Profiles3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>QPMS__Approver_2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field is used to store third approver in approval process.</description>
        <inlineHelpText>This field is used to store third approver in approval process.</inlineHelpText>
        <label>Approver 2</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Person_Profiles4</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>QPMS__Approver_3__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field is used to store fourth approver in approval process.</description>
        <inlineHelpText>This field is used to store fourth approver in approval process.</inlineHelpText>
        <label>Approver 3</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Person_Profiles5</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>QPMS__Approver__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>To store first user in approval process</description>
        <inlineHelpText>To store first user in approval process</inlineHelpText>
        <label>Approver</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Person_Profiles2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>QPMS__Courses__c</fullName>
        <description>This field stores the associated job function courses</description>
        <label>Courses</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>QPMS__CurrentApprovalSequenceNumber__c</fullName>
        <description>This field is used to store CurrentApprovalSequenceNumber in approval process</description>
        <inlineHelpText>This field is used to store CurrentApprovalSequenceNumber in approval process</inlineHelpText>
        <label>CurrentApprovalSequenceNumber</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>QPMS__Document__c</fullName>
        <label>Document</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>QPMS__Email__c</fullName>
        <formula>QPMS__User__r.Email</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__External_Id__c</fullName>
        <label>External Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__First_Name__c</fullName>
        <description>this field is used to store the First name of user</description>
        <inlineHelpText>Person Profile First Name</inlineHelpText>
        <label>First Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__Followers__c</fullName>
        <description>This is used to store follow unfollow</description>
        <label>Followers</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>None</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>QPMS__Initial_Submitter__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>To save initial submitter value in approval process</description>
        <label>Initial Submitter</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Person_ProfilesN9d4</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>QPMS__InitiatingSite__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Initiating Site</label>
        <referenceTo>QPMS__Manufacturing_Site__c</referenceTo>
        <relationshipLabel>Person Profiles</relationshipLabel>
        <relationshipName>Person_Profiles</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>QPMS__Initiating_Site__c</fullName>
        <formula>QPMS__InitiatingSite__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Initiating Site</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__Is_Submit__c</fullName>
        <defaultValue>false</defaultValue>
        <description>this field store submit value</description>
        <label>Is Submit</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>QPMS__Job_Function__c</fullName>
        <description>This is used to store multiple job functions in person  profile</description>
        <inlineHelpText>Job function</inlineHelpText>
        <label>Job Function</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>QPMS__Last_Name__c</fullName>
        <description>This field is used to store last name of user</description>
        <inlineHelpText>Person Profile Last Name</inlineHelpText>
        <label>Last Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__Middle_Initial__c</fullName>
        <description>This field id used to store middle initial</description>
        <inlineHelpText>Person Profile Middle Name</inlineHelpText>
        <label>Middle Initial</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__Non_Licensed_User__c</fullName>
        <formula>IF(QPMS__UserId__c == null, true, false)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Non-Licensed User</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>QPMS__Note_To_Approver__c</fullName>
        <description>To save approvers note</description>
        <inlineHelpText>Note to Approver</inlineHelpText>
        <label>Note To Approver</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>QPMS__Person_Profile_Login__c</fullName>
        <caseSensitive>true</caseSensitive>
        <label>Person Profile Login</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>QPMS__Person_Profile_Status__c</fullName>
        <description>This  filed is used to store person profile approval staus</description>
        <label>Person Profile Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>Inactive</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>QPMS__Previous_Job_Function__c</fullName>
        <label>Previous Job Function</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>QPMS__Reason__c</fullName>
        <description>Reason for activate inactivate</description>
        <label>Reason</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>QPMS__Reports_To_Title__c</fullName>
        <formula>QPMS__Reports_To__r.FirstName &amp; &quot; &quot;&amp; QPMS__Reports_To__r.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Reports To</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__Reports_To__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field is used to store user id(this is look up relation)</description>
        <inlineHelpText>Person Profile  Reports To</inlineHelpText>
        <label>Reports To</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Person_Profiles1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>QPMS__Sequence__c</fullName>
        <description>This field stores the approver sequence number</description>
        <label>Sequence</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>10</fullName>
                </value>
                <value>
                    <fullName>20</fullName>
                </value>
                <value>
                    <fullName>30</fullName>
                </value>
                <value>
                    <fullName>40</fullName>
                </value>
                <value>
                    <fullName>50</fullName>
                </value>
                <value>
                    <fullName>60</fullName>
                </value>
                <value>
                    <fullName>70</fullName>
                </value>
                <value>
                    <fullName>80</fullName>
                </value>
                <value>
                    <fullName>90</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>QPMS__Signed_Off_Details__c</fullName>
        <description>This field stores sign of details of PP</description>
        <label>Signed Off Details</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>QPMS__Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>Inactive</fullName>
                </value>
                <value>
                    <fullName>Draft</fullName>
                </value>
                <value>
                    <fullName>InReview</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>QPMS__Title__c</fullName>
        <description>This field is used to store the title</description>
        <inlineHelpText>Person Profile Title</inlineHelpText>
        <label>Title</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__Total_Trained_Hours__c</fullName>
        <defaultValue>0</defaultValue>
        <description>This filed is used store total trained hours</description>
        <label>Total Trained Hours</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>QPMS__UserId__c</fullName>
        <description>This fields external id for  personprofile</description>
        <externalId>true</externalId>
        <label>UserId</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>QPMS__User_From_Doc__c</fullName>
        <defaultValue>false</defaultValue>
        <label>User From Doc</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>QPMS__User_Name_Title__c</fullName>
        <formula>QPMS__User__r.FirstName &amp; &quot; &quot;&amp; QPMS__User__r.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>User Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This fielsd stores the standaerd user name</description>
        <inlineHelpText>User Name</inlineHelpText>
        <label>User Name</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Person_Profiles</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>QPMS__isDisabled__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This is used to flag in Approval Process.</description>
        <inlineHelpText>This is used to flag in Approval Process.</inlineHelpText>
        <label>isDisabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>QPMS__isLocked__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Flag to make record locked when it is submitted for approval</description>
        <inlineHelpText>Flag to make record locked when it is submitted for approval</inlineHelpText>
        <label>isLocked</label>
        <type>Checkbox</type>
    </fields>
    <label>Person Profile</label>
    <listViews>
        <fullName>QPMS__All</fullName>
        <columns>NAME</columns>
        <columns>QPMS__First_Name__c</columns>
        <columns>QPMS__Last_Name__c</columns>
        <columns>QPMS__Status__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>PP-{0000}</displayFormat>
        <label>Person Profile Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Person Profiles</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>